--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ ELASTIC_APM_SERVER_URL=
 # Keymetrics
 KEYMETRICS_PUBLIC=
 KEYMETRICS_SECRET=
+
+# MySQL
+MYSQL_ROOT_PASSWORD=
+MYSQL_ALLOW_EMPTY_PASSWORD=
+MYSQL_RANDOM_ROOT_PASSWORD=
