--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
+    "mysql": "^2.15.0",
     "swagger-jsdoc": "^1.9.7",
     "uuid": "^3.2.1"
   },
