Squashed commit of the following:
commit 6f5d01fedf9e1a409877f8a1170a52d648b8bf7a
Author: Arturs Jansons <a.jansons@gmail.com>
Date:   Sat Jun 23 03:27:37 2018 +0300

    Add docker-compose

    Update .gitignore

    fix

    Upgrade

commit 12961bbe8323f2b6cfb144275ba00bed670decac
Author: Arturs Jansons <a.jansons@gmail.com>
Date:   Tue Feb 4 03:02:41 2020 +0300

    fix

commit 97b74d5dc436e7d744e0a2323d6f382c5bd3c3ab
Author: Arturs Jansons <a.jansons@gmail.com>
Date:   Sat Jun 23 03:31:27 2018 +0300

    Update .gitignore

commit 1f10deaaa2658aa181d869e69d15d9265810ec41
Author: Arturs Jansons <a.jansons@gmail.com>
Date:   Sat Jun 23 03:27:37 2018 +0300

    Add docker-compose

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@
 APP_NAME=
 APP_HOST=
 APP_PORT=
-DB_HOST=
-DB_PORT=
 
 # Logger
 LOG_DIRECTORY=
@@ -23,3 +21,4 @@ KEYMETRICS_SECRET=
 MYSQL_ROOT_PASSWORD=
 MYSQL_ALLOW_EMPTY_PASSWORD=
 MYSQL_RANDOM_ROOT_PASSWORD=
+MYSQL_SOCKET_PATH=
